// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div>
  <EntityAdditionalDetailHeading>
    Disability Access
  </EntityAdditionalDetailHeading>
  <EntityAdditionalDetailContent>
    The Access Text
    <span>
      See
      <a
        href="http://some/link"
        rel="noopener"
        target="_blank"
      >
        this page
      </a>
      for full access details.
    </span>
  </EntityAdditionalDetailContent>
</div>
`;

exports[`should render correctly when there is no disability link 1`] = `
<div>
  <EntityAdditionalDetailHeading>
    Disability Access
  </EntityAdditionalDetailHeading>
  <EntityAdditionalDetailContent>
    The Access Text
  </EntityAdditionalDetailContent>
</div>
`;
